# cli-todo-list

./: .gitignore  Cargo.toml  REVIEW_QUEUE.md  skills-lock.json  switchboard.toml
.kilocode/skills/: rust-async-patterns  rust-best-practices  test-driven-development
.switchboard/: heartbeat.json
.switchboard/input/: PRD.md
.switchboard/planning/: README.md  architecture.md  project-context.md
.switchboard/state/: .dev_done_1  .dev_done_2  .maintenance_mode  .project_complete  .reviewer_in_progress  .sm_in_progress  .solutioning_done  .sprint_complete  .stories_ready  BLOCKERS.md  DEV_TODO1.md  DEV_TODO2.md  QA_BUILD_TEST_PASSED.md  SPRINT_REPORT.md  planner_session.md  sm_session.md  sprint-status.yaml
comms/outbox/: code-reviewer-03.4-scope-fix-approved-2026-03-01-2359.md  code-reviewer-story-01-4-approved-2026-03-02.md  code-reviewer-story-03.4-approved-2026-03-01-2359.md  dev-1-sprint-10-complete-2026-03-02-0834.md  dev-1-sprint-already-complete-2026-03-02-1034.md  dev-1-sprint-complete-2026-03-02-0412.md  dev-1-sprint-done-2026-03-02.md  dev-1-story-completed-2026-03-01-2347.md  dev-2-sprint-already-complete-2026-03-02-1350.md  dev-2-story-requeued-2026-03-01-2329.md  dev-2-story-requeued-2026-03-02.md  scrum-master-maintenance-mode-2026-03-02-0512.md  scrum-master-project-complete-2026-03-02-0007.md  scrum-master-sprint-10-maintenance-complete-2026-03-02-1300.md  (+2 more)
reports/: codebase-scan-2026-03-02-0924.md
skills/: skills.lock.json
src/: cli.rs  commands.rs  config.rs  error.rs  filter.rs  lib.rs  main.rs  models.rs  repository.rs  tag.rs  task.rs
(+53 files in other folders)
