[package]
name = "taskforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "taskforge"
path = "src/lib.rs"

[[bin]]
name = "taskforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
thiserror = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3.8"
